force-app/main/default/objects/Live_Engagement_Response__c/Live_Engagement_Response__c.object-meta.xml
<CustomObject>
    <label>Live Engagement Response</label>
    <nameField>
        <displayFormat>LER-{0000000}</displayFormat>
        <label>Live Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Live Engagement Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>