force-app/main/default/objects/Live_Engagement_Response__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Live Engagement Responses</relationshipLabel>
    <relationshipName>Live_Engagement_Responses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>