force-app/main/default/objects/Live_Engagement_Response__c/fields/Live_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Live_Engagement__c</fullName>
    <label>Live Engagement</label>
    <referenceTo>Live_Engagement__c</referenceTo>
    <relationshipLabel>Live Engagement Responses</relationshipLabel>
    <relationshipName>Live_Engagement_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>