force-app/main/default/objects/Live_Engagement_Response__c/fields/Publish_Question__c.field-meta.xml
<CustomField>
    <fullName>Publish_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publish Question</label>
    <type>Checkbox</type>
</CustomField>