force-app/main/default/objects/Live_Engagement_Response__c/fields/Question_Response__c.field-meta.xml
<CustomField>
    <fullName>Question_Response__c</fullName>
    <label>Question Response</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>