force-app/main/default/objects/Live_Engagement_Response__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Message</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>