force-app/main/default/objects/Live_Engagement_Response__c/fields/TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>TimeStamp</label>
    <type>DateTime</type>
</CustomField>